Added support for optional `List<String>` and `UUID` parameters in http server controllers (#24)