@@ -8,20 +8,20 @@ import javax.annotation.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @ParametersAreNonnullByDefault
-public class RequestHandlerUtils {
-    private RequestHandlerUtils() {
-    }
+public final class RequestHandlerUtils {
+
+    private RequestHandlerUtils() {}
 
     /*
-     * Path: String, UUID, Integer, Long, Double, Enum<?>
+     * Path: String, UUID, Integer, Long, Double, Enum
      */
-
     @Nonnull
     public static String parseStringPathParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
         var result = request.pathParams().get(name);
@@ -31,11 +31,14 @@ public class RequestHandlerUtils {
         return result;
     }
 
+    @Nonnull
     public static UUID parseUUIDPathParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
         var result = request.pathParams().get(name);
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
+
         try {
             return UUID.fromString(result);
         } catch (IllegalArgumentException e) {
@@ -48,6 +51,7 @@ public class RequestHandlerUtils {
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
         try {
             return Integer.parseInt(result);
         } catch (NumberFormatException e) {
@@ -60,6 +64,7 @@ public class RequestHandlerUtils {
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
         try {
             return Long.parseLong(result);
         } catch (NumberFormatException e) {
@@ -72,6 +77,7 @@ public class RequestHandlerUtils {
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
         try {
             return Double.parseDouble(result);
         } catch (NumberFormatException e) {
@@ -85,6 +91,7 @@ public class RequestHandlerUtils {
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
         try {
             return Enum.valueOf(enumType, result);
         } catch (Exception exception) {
@@ -95,7 +102,6 @@ public class RequestHandlerUtils {
     /*
      * Headers: String, Integer, List<String>, List<Integer>
      */
-
     @Nonnull
     public static String parseStringHeaderParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
         var result = request.headers().get(name);
@@ -115,15 +121,26 @@ public class RequestHandlerUtils {
     }
 
     public static List<String> parseStringListHeaderParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.headers().get(name);
+        var result = parseOptionalStringListHeaderParameter(request, name);
         if (result == null) {
             throw HttpServerResponseException.of(400, "Header '%s' is required".formatted(name));
         }
+
+        return result;
+    }
+
+    @Nullable
+    public static List<String> parseOptionalStringListHeaderParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.headers().get(name);
+        if (result == null) {
+            return null;
+        }
+
         return result.stream()
             .flatMap(h -> Stream.of(h.split(",")))
             .map(String::trim)
             .filter(Predicate.not(String::isBlank))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static int parseIntegerHeaderParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
@@ -131,7 +148,12 @@ public class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             throw HttpServerResponseException.of(400, "Header '%s' is required".formatted(name));
         }
+
         var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Header '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Integer.parseInt(first);
         } catch (NumberFormatException e) {
@@ -145,7 +167,12 @@ public class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
+
         var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Header '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Integer.parseInt(first);
         } catch (NumberFormatException e) {
@@ -154,20 +181,31 @@ public class RequestHandlerUtils {
     }
 
     public static List<Integer> parseIntegerListHeaderParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var headers = request.headers().get(name);
-        if (headers == null || headers.isEmpty()) {
+        var result = parseOptionalIntegerListHeaderParameter(request, name);
+        if (result == null) {
             throw HttpServerResponseException.of(400, "Header '%s' is required".formatted(name));
         }
+        return result;
+    }
+
+    @Nullable
+    public static List<Integer> parseOptionalIntegerListHeaderParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var headers = request.headers().get(name);
+        if (headers == null || headers.isEmpty()) {
+            return null;
+        }
+
         List<Integer> result = new ArrayList<>();
-        for (String header: headers) {
+        for (String header : headers) {
             header = header.trim();
             if (!header.isEmpty()) {
                 String[] split = header.split(",");
-                for (String s: split) {
+                for (String s : split) {
                     s = s.trim();
                     if (s.isEmpty()) {
                         throw HttpServerResponseException.of(400, "Header %s(%s) has invalid value".formatted(name, header));
                     }
+
                     try {
                         result.add(Integer.parseInt(s));
                     } catch (NumberFormatException e) {
@@ -177,22 +215,49 @@ public class RequestHandlerUtils {
             }
         }
 
-        return result;
+        return List.copyOf(result);
     }
 
-
     /*
-        Query: String, Integer, Long, Double, Boolean, Enum<?>, List<String>, List<Integer>, List<Long>, List<Double>, List<Boolean>, List<Enum<?>>, UUID
+     * Query: String, Integer, Long, Double, Boolean, Enum, UUID
      */
-
     @Nonnull
-    public static String parseStringQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
+    public static UUID parseUuidQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalUuidQueryParameter(request, name);
+        if (result == null) {
             throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
         }
 
-        return result.iterator().next();
+        return result;
+    }
+
+    @Nullable
+    public static UUID parseOptionalUuidQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null || result.isEmpty()) {
+            return null;
+        }
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
+        try {
+            return UUID.fromString(first);
+        } catch (IllegalArgumentException e) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid value '%s'".formatted(name, result));
+        }
+    }
+
+    @Nonnull
+    public static String parseStringQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalStringQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+
+        return result;
     }
 
     @Nullable
@@ -201,29 +266,16 @@ public class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
+
         return result.iterator().next();
     }
 
-    public static List<String> parseStringListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return List.copyOf(result);
-    }
-
-
     public static int parseIntegerQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
+        var result = parseOptionalIntegerQueryParameter(request, name);
+        if (result == null) {
             throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
         }
-        var first = result.iterator().next();
-        try {
-            return Integer.parseInt(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
+        return result;
     }
 
     @Nullable
@@ -232,7 +284,12 @@ public class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
-        var first = result.iterator().next();
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Integer.parseInt(first);
         } catch (NumberFormatException e) {
@@ -240,37 +297,12 @@ public class RequestHandlerUtils {
         }
     }
 
-    public static List<Integer> parseIntegerListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return result.stream()
-            .map(v -> {
-                if (v == null || v.isBlank()) {
-                    return null;
-                }
-                try {
-                    return Integer.parseInt(v);
-                } catch (NumberFormatException e) {
-                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
-                }
-            })
-            .collect(Collectors.toList());
-    }
-
-
     public static long parseLongQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
+        var result = parseOptionalLongQueryParameter(request, name);
+        if (result == null) {
             throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
         }
-        var first = result.iterator().next();
-        try {
-            return Long.parseLong(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
+        return result;
     }
 
     @Nullable
@@ -279,7 +311,12 @@ public class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
-        var first = result.iterator().next();
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Long.parseLong(first);
         } catch (NumberFormatException e) {
@@ -287,123 +324,7 @@ public class RequestHandlerUtils {
         }
     }
 
-    public static List<Long> parseLongListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return result.stream()
-            .map(v -> {
-                if (v == null || v.isBlank()) {
-                    return null;
-                }
-                try {
-                    return Long.parseLong(v);
-                } catch (NumberFormatException e) {
-                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
-                }
-            })
-            .collect(Collectors.toList());
-    }
-
-
-    public static double parseDoubleQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
-            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
-        }
-        var first = result.iterator().next();
-        try {
-            return Double.parseDouble(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
-    }
-
-    @Nullable
-    public static Double parseOptionalDoubleQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
-            return null;
-        }
-        var first = result.iterator().next();
-        try {
-            return Double.parseDouble(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
-    }
-
-    public static List<Double> parseDoubleListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return result.stream()
-            .map(v -> {
-                if (v == null || v.isBlank()) {
-                    return null;
-                }
-                try {
-                    return Double.parseDouble(v);
-                } catch (NumberFormatException e) {
-                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
-                }
-            })
-            .collect(Collectors.toList());
-    }
-
-
-    public static Boolean parseBooleanQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
-            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
-        }
-        var first = result.iterator().next();
-        try {
-            // todo
-            return Boolean.parseBoolean(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
-    }
-
-    @Nullable
-    public static Boolean parseOptionalBooleanQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
-            return null;
-        }
-        var first = result.iterator().next();
-        try {
-            // todo
-            return Boolean.parseBoolean(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
-    }
-
-    public static List<Boolean> parseBooleanListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return result.stream()
-            .map(v -> {
-                // todo
-                if (v == null || v.isBlank()) {
-                    return null;
-                }
-                try {
-                    return Boolean.parseBoolean(v);
-                } catch (NumberFormatException e) {
-                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
-                }
-            })
-            .collect(Collectors.toList());
-    }
-
-
+    @Nonnull
     public static <T extends Enum<T>> T parseEnumQueryParameter(HttpServerRequest request, Class<T> type, String name) throws HttpServerResponseException {
         var result = parseOptionalEnumQueryParameter(request, type, name);
         if (result == null) {
@@ -418,7 +339,12 @@ public class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
-        var first = result.iterator().next();
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Enum.valueOf(type, first);
         } catch (Exception exception) {
@@ -426,16 +352,272 @@ public class RequestHandlerUtils {
         }
     }
 
-    public static <T extends Enum<T>> List<T> parseEnumListQueryParameter(HttpServerRequest request, Class<T> type, String name) throws HttpServerResponseException {
+    public static boolean parseBooleanQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalBooleanQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static Boolean parseOptionalBooleanQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null || result.isEmpty()) {
+            return null;
+        }
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
+        try {
+            // todo
+            return Boolean.parseBoolean(first);
+        } catch (NumberFormatException e) {
+            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
+        }
+    }
+
+    public static double parseDoubleQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalDoubleQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static Double parseOptionalDoubleQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null || result.isEmpty()) {
+            return null;
+        }
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
+        try {
+            return Double.parseDouble(first);
+        } catch (NumberFormatException e) {
+            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
+        }
+    }
+
+    /*
+     * Query: List<String>, List<Integer>, List<Long>, List<Double>, List<Boolean>, List<UUID>, List<Enum>
+     */
+    @Nonnull
+    public static List<Integer> parseIntegerListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalIntegerListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<Integer> parseOptionalIntegerListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
         var result = request.queryParams().get(name);
         if (result == null) {
-            return List.of();
+            return null;
         }
+
         return result.stream()
+            .filter(Objects::nonNull)
             .map(v -> {
-                if (v == null || v.isBlank()) {
-                    return null;
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
                 }
+
+                try {
+                    return Integer.parseInt(v);
+                } catch (NumberFormatException e) {
+                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static List<UUID> parseUuidListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalUuidListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<UUID> parseOptionalUuidListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
+                try {
+                    return UUID.fromString(v);
+                } catch (IllegalArgumentException e) {
+                    throw HttpServerResponseException.of(400, "Path parameter '%s' has invalid value '%s'".formatted(name, result));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static List<String> parseStringListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalStringListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<String> parseOptionalStringListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream().toList();
+    }
+
+    @Nonnull
+    public static List<Long> parseLongListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalLongListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<Long> parseOptionalLongListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
+                try {
+                    return Long.parseLong(v);
+                } catch (NumberFormatException e) {
+                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static List<Double> parseDoubleListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalDoubleListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<Double> parseOptionalDoubleListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
+                try {
+                    return Double.parseDouble(v);
+                } catch (NumberFormatException e) {
+                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static List<Boolean> parseBooleanListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalBooleanListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<Boolean> parseOptionalBooleanListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
+                try {
+                    return Boolean.parseBoolean(v);
+                } catch (NumberFormatException e) {
+                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static <T extends Enum<T>> List<T> parseEnumListQueryParameter(HttpServerRequest request, Class<T> type, String name) throws HttpServerResponseException {
+        var result = parseOptionalEnumListQueryParameter(request, type, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static <T extends Enum<T>> List<T> parseOptionalEnumListQueryParameter(HttpServerRequest request, Class<T> type, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
                 try {
                     return Enum.valueOf(type, v);
                 } catch (Exception exception) {
@@ -444,5 +626,4 @@ public class RequestHandlerUtils {
             })
             .collect(Collectors.toList());
     }
-
 }
